--- a/appBackend/package.json
+++ b/appBackend/package.json
@@ -3,18 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "db:create": "dotenv sequelize-cli db:create",
-    "db:drop": "dotenv sequelize-cli db:drop",
-    "db:migrate": "dotenv sequelize-cli db:migrate",
-    "db:migrate:undo:all": "dotenv sequelize-cli db:migrate:undo:all",
-    "db:redo": "npm run db:seed:undo:all && npm run db:migrate:undo:all && npm run db:migrate && npm run db:seed:all",
-    "db:seed:all": "dotenv sequelize-cli db:seed:all",
-    "db:seed:undo:all": "dotenv sequelize-cli db:seed:undo:all",
-    "dev": "dotenv nodemon ./bin/www",
-    "migration:generate": "sequelize-cli migration:generate",
-    "model:generate": "sequelize-cli model:generate",
-    "seed:generate": "sequelize-cli seed:generate",
-    "start": "dotenv ./bin/www"
+    "sequelize": "sequelize",
+    "sequelize-cli": "sequelize-cli",
+    "start": "per-env",
+    "start:development": "nodemon -r dotenv/config ./bin/www",
+    "start:production": "node ./bin/www"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
